--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@ body {
   border-radius: 0;
   margin: 0;
 }
+@media (hover: hover) {
+  .tabs button:hover {
+    background: rgba(0, 0, 0, 0.04);
+  }
+}
 </style>
 </head>
 <body>
@@ -500,13 +505,13 @@ this.user = tgUser || {
   </div>
 </div>
 
-    <div class="flex gap-2 mt-3 overflow-x-auto">
+    <div class="tabs flex gap-2 mt-3 overflow-x-auto">
       ${['today','inbox','focus','review','habits','shopping','stats','support','subscription','settings'].map(v => `
         <button
           onclick="app.setView('${v}')"
-          class="px-3 py-1.5 text-sm rounded-md ${
+          class="px-3 py-1.5 text-sm rounded-md transition-all duration-200 ${
             this.view === v
-              ? 'bg-gray-900 text-white'
+              ? 'bg-gray-900 text-white shadow-sm scale-[1.03]'
               : 'text-gray-600'
           }">
           ${this.tr(v)}
