--- a/index.html
+++ b/index.html
@@ -212,57 +212,93 @@ const tgUser = tg.initDataUnsafe?.user;
 // =========================
 
 const PRICE_MAP = {
-  // молочка
+  // 🥛 Молочные
   молоко: 80,
-  сыр: 250,
-  масло: 180,
+  кефир: 85,
+  ряженка: 90,
   йогурт: 70,
-  сметана: 90,
+  сыр: 250,
   творог: 120,
+  сметана: 90,
+  масло: 180,
+  сливки: 110,
 
-  // хлеб и бакалея
+  // 🍞 Хлеб / бакалея
   хлеб: 50,
   батон: 45,
+  лаваш: 60,
   рис: 90,
   гречка: 110,
   макароны: 70,
+  спагетти: 85,
   мука: 60,
   сахар: 75,
   соль: 20,
+  овсянка: 95,
+  хлопья: 140,
 
-  // овощи
+  // 🥔 Овощи
   картофель: 40,
   картошка: 40,
   помидоры: 150,
+  томаты: 150,
   огурцы: 130,
   лук: 35,
   морковь: 45,
   капуста: 50,
+  брокколи: 160,
+  цветная: 170,
+  перец: 190,
+  чеснок: 60,
+  свекла: 40,
 
-  // фрукты
+  // 🍎 Фрукты
   яблоки: 120,
   бананы: 110,
   апельсины: 140,
+  мандарины: 150,
   груши: 160,
+  виноград: 220,
+  лимоны: 180,
+  киви: 200,
 
-  // мясо и рыба
+  // 🍗 Мясо / рыба
   курица: 320,
+  филе: 420,
   говядина: 650,
   свинина: 480,
   фарш: 420,
+  индейка: 520,
   рыба: 500,
+  лосось: 900,
+  треска: 480,
+  селедка: 260,
 
-  // напитки
-  вода: 40,
-  сок: 120,
-  чай: 180,
-  кофе: 350,
-
-  // прочее
+  // 🥚 Прочее съедобное
   яйца: 120,
   колбаса: 300,
   сосиски: 260,
-  пельмени: 400
+  пельмени: 400,
+  котлеты: 360,
+  пицца: 420,
+  майонез: 110,
+  кетчуп: 95,
+  соус: 130,
+
+  // ☕ Напитки
+  вода: 40,
+  сок: 120,
+  лимонад: 90,
+  чай: 180,
+  кофе: 350,
+  какао: 160,
+
+  // 🍫 Сладкое
+  шоколад: 120,
+  печенье: 90,
+  конфеты: 150,
+  вафли: 80,
+  торт: 600
 };
 // =========================
 // Словарь категорий
@@ -897,10 +933,11 @@ ${item.bought ? 'bg-gray-900 text-white border-gray-900' : 'border-gray-300'}">
               <!-- название -->
               <div class="flex-1">
   <span class="text-sm ${
-    item.bought ? 'line-through text-gray-400' : 'text-gray-900'
-  }">
-    ${item.name}
-  </span>
+  item.bought ? 'line-through text-gray-400' : 'text-gray-900'
+}">
+  ${item.name}
+  ${item.quantity > 1 ? `×${item.quantity}` : ''}
+</span>
 
   <div class="text-xs text-gray-400">
     ${item.category === 'products' ? '🥦 Продукты' : '🧻 Быт'}
