--- a/index.html
+++ b/index.html
@@ -301,6 +301,45 @@ const PRICE_MAP = {
   торт: 600
 };
 
+const SUBSCRIPTIONS = {
+  free: {
+    id: 'free',
+    name: '✨ Free Start',
+    price: 0,
+    features: [
+      'До 50 задач',
+      'Базовые функции',
+      'Список покупок'
+    ]
+  },
+
+  premium: {
+    id: 'premium',
+    name: '🌟 Premium Plus',
+    monthly: 170,
+    yearly: 120,
+    trialDays: 3,
+    features: [
+      'Без лимитов',
+      'Расширенная статистика',
+      'AI расчёт покупок',
+      'Тёмная тема'
+    ]
+  },
+
+  pro: {
+    id: 'pro',
+    name: '🚀 Pro Max',
+    monthly: 250,
+    yearly: 200,
+    features: [
+      'Всё из Premium Plus',
+      'Приоритетные фичи',
+      'Ранний доступ'
+    ]
+  }
+};
+
 const SUGGESTIONS = Object.keys(PRICE_MAP);
 
 // =========================
@@ -351,7 +390,8 @@ this.user = tgUser || {
   first_name: 'User'
 };
                 this.view = 'today';
-                this.plan = planFromUrl;
+                this.trialUsed = localStorage.getItem('trialUsed') === 'true';
+                this.trialEndsAt = localStorage.getItem('trialEndsAt');
                 this.userId = userIdFromUrl;
                 this.tasks = JSON.parse(localStorage.getItem('tasks') || '[]');
                 this.habits = JSON.parse(localStorage.getItem('habits') || '[]');
@@ -359,7 +399,7 @@ this.user = tgUser || {
                 this.lang = localStorage.getItem('lang') || 'ru';
                 this.theme = localStorage.getItem('theme') || 'light';
                 this.init();
-                this.plan = localStorage.getItem('plan') || 'FREE';
+                this.plan = localStorage.getItem('plan') || planFromUrl || 'free';
 
             }
 
@@ -553,6 +593,28 @@ selectSuggestion(word) {
                 this.render();
             }
 
+setBilling(period) {
+  this.billingPeriod = period;
+  this.render();
+}
+
+startTrial() {
+  if (this.trialUsed) return;
+
+  const now = Date.now();
+  const threeDays = 3 * 24 * 60 * 60 * 1000;
+
+  this.plan = 'premium';
+  this.trialUsed = true;
+  this.trialEndsAt = now + threeDays;
+
+  localStorage.setItem('plan', 'premium');
+  localStorage.setItem('trialUsed', 'true');
+  localStorage.setItem('trialEndsAt', this.trialEndsAt);
+
+  this.render();
+}
+
             toggleTheme() {
                 this.theme = this.theme === 'light' ? 'dark' : 'light';
                 localStorage.setItem('theme', this.theme);
@@ -725,11 +787,13 @@ selectSuggestion(word) {
   </h1>
 
   <span class="text-[10px] px-2 py-0.5 rounded-full
-    ${this.plan === 'PREMIUM'
-      ? 'bg-yellow-100 text-yellow-700'
-      : 'bg-gray-100 text-gray-600'}">
-    ${this.plan}
-  </span>
+  ${this.plan === 'premium'
+    ? 'bg-yellow-100 text-yellow-700'
+    : this.plan === 'pro'
+    ? 'bg-purple-100 text-purple-700'
+    : 'bg-gray-100 text-gray-600'}">
+  ${SUBSCRIPTIONS[this.plan]?.name || '✨ Free Start'}
+</span>
 </div>
     <p class="text-xs text-muted">
       ${new Date().toLocaleDateString('ru-RU', {
@@ -1114,59 +1178,81 @@ renderSettings() {
         }
 
         renderSubscription() {
-            const plans = [
-                {
-                    key: 'free',
-                    name: 'FREE',
-                    icon: '🆓',
-                    price: 'Бесплатно',
-                    features: ['До 50 задач', 'Базовые функции', 'Список покупок'],
-                    current: this.plan === 'free'
-                },
-                {
-                    key: 'premium',
-                    name: 'PREMIUM',
-                    icon: '⭐',
-                    price: '149₽/мес',
-                    features: ['Без лимитов', 'Расширенная статистика', 'AI расчет покупок', 'Темная тема'],
-                    current: this.plan === 'premium'
-                },
-                {
-                    key: 'pro',
-                    name: 'PRO',
-                    icon: '🏆',
-                    price: '219₽/мес',
-                    features: ['Всё из Premium', 'AI помощник', 'Интеграции', 'Приоритетная поддержка'],
-                    current: this.plan === 'pro'
-                }
-            ];
+  const plan = this.billingPeriod || 'monthly';
+
+  const renderPrice = (sub) => {
+    if (sub.price === 0) return 'Бесплатно';
+    return plan === 'monthly'
+      ? `${sub.monthly} ₽ / мес`
+      : `${sub.yearly} ₽ / год`;
+  };
+
+  return `
+    <div class="card">
+      <h2 class="text-lg font-semibold mb-4">Подписка</h2>
+
+      <!-- Переключатель -->
+      <div class="flex gap-2 mb-4">
+        <button
+          onclick="app.setBilling('monthly')"
+          class="px-3 py-1 rounded ${
+            plan === 'monthly' ? 'bg-gray-900 text-white' : 'border'
+          }">
+          Месяц
+        </button>
+        <button
+          onclick="app.setBilling('yearly')"
+          class="px-3 py-1 rounded ${
+            plan === 'yearly' ? 'bg-gray-900 text-white' : 'border'
+          }">
+          Год (выгодно)
+        </button>
+      </div>
+
+      <!-- Тарифы -->
+      <div class="space-y-4">
+        ${Object.values(SUBSCRIPTIONS).map(sub => `
+          <div class="border rounded-lg p-4">
+            <div class="flex justify-between items-center mb-2">
+              <div class="font-medium">${sub.name}</div>
+              <div class="text-sm font-semibold">
+                ${renderPrice(sub)}
+              </div>
+            </div>
+
+            <ul class="text-sm text-gray-600 mb-3">
+              ${sub.features.map(f => `<li>• ${f}</li>`).join('')}
+            </ul>
+
+            ${
+              sub.trialDays
+                ? `<div class="text-xs text-green-600 mb-2">
+                    🎁 Бесплатно ${sub.trialDays} дня для новых пользователей
+                  </div>`
+                : ''
+            }
+
+            ${
+  sub.id === 'premium' && !this.trialUsed
+    ? `<button
+         onclick="app.startTrial()"
+         class="w-full px-3 py-2 rounded bg-gray-900 text-white text-sm">
+         🎁 Попробовать 3 дня бесплатно
+       </button>`
+    : `<button
+  class="w-full px-3 py-2 rounded border text-sm ${this.plan === sub.id ? 'opacity-50' : ''}"
+  ${this.plan === sub.id ? 'disabled' : ''}
+>
+  ${this.plan === sub.id ? 'Текущий план' : 'Выбрать'}
+</button>`
+}
+          </div>
+        `).join('')}
+      </div>
+    </div>
+  `;
+}
             
-            return plans.map(p => `
-                <div class="glass-card rounded-3xl p-5 ${p.current ? 'ring-2 ring-white ring-opacity-50 shadow-2xl' : ''} mb-4">
-                    ${p.current ? '<div class="inline-block bg-gradient-to-r from-green-500 to-green-600 text-white text-xs font-bold px-4 py-2 rounded-full mb-3 shadow-lg">✓ Текущий тариф</div>' : ''}
-                    <div class="flex items-center gap-4 mb-4">
-                        <span class="text-5xl">${p.icon}</span>
-                        <div>
-                            <h3 class="text-2xl font-bold gradient-text">${p.name}</h3>
-                            <p class="text-sm text-gray-600 font-bold">${p.price}</p>
-                        </div>
-                    </div>
-                    <div class="space-y-2 mb-4">
-                        ${p.features.map(f => `
-                            <div class="flex items-center gap-3 text-sm text-gray-700">
-                                <span class="text-green-500 font-bold text-lg">✓</span>
-                                <span class="font-medium">${f}</span>
-                            </div>
-                        `).join('')}
-                    </div>
-                    ${!p.current && p.key !== 'free' ? `
-                        <button class="w-full py-4 bg-gradient-to-r from-purple-600 to-pink-600 text-white rounded-2xl font-bold shadow-lg active:shadow-md transform active:scale-95 transition-all">
-                            ${this.tr('subscribe')}
-                        </button>
-                    ` : ''}
-                </div>
-            `).join('') + `<p class="text-xs text-white text-opacity-70 text-center mt-4">💳 Безопасная оплата через Telegram</p>`;
-        }
     }
 
     const app = new App();
