--- a/index.html
+++ b/index.html
@@ -974,6 +974,35 @@ startTrial() {
   }).join('');
 }
             renderStats(completed) {
+
+  // 🔒 Free — только заглушка
+  if (this.plan === 'free') {
+    return `
+      <div class="stats-wrap">
+        <div class="card text-center py-10">
+          <div class="text-3xl mb-3">📊</div>
+
+          <h3 class="text-base font-semibold text-gray-900 mb-2">
+            Статистика доступна в Premium Plus
+          </h3>
+
+          <p class="text-sm text-gray-500 mb-4">
+            Отслеживайте прогресс, серии привычек и аналитику задач
+          </p>
+
+          <button
+            onclick="app.setView('subscription')"
+            class="inline-flex items-center justify-center
+                   px-4 py-2 rounded-lg
+                   bg-gray-900 text-white text-sm font-medium">
+            Перейти к подписке
+          </button>
+        </div>
+      </div>
+    `;
+  }
+
+  // ✅ Premium / Pro — реальная статистика
   const stats = [
     { icon: '📋', label: this.tr('total'), value: this.tasks.length },
     { icon: '✅', label: this.tr('completed'), value: completed },
