--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@ this.user = tgUser || {
                 this.theme = localStorage.getItem('theme') || 'light';
                 this.init();
                 this.plan = localStorage.getItem('plan') || planFromUrl || 'free';
+                this.onboardingSeen = localStorage.getItem('onboardingSeen') === 'true';
 
             }
 
@@ -501,6 +502,47 @@ this.user = tgUser || {
                 localStorage.setItem('habits', JSON.stringify(this.habits));
                 this.render();
             }
+
+closeOnboarding() {
+  this.onboardingSeen = true;
+  localStorage.setItem('onboardingSeen', 'true');
+  this.render();
+}
+
+renderOnboarding() {
+  if (this.plan !== 'free') return '';
+  if (this.onboardingSeen) return '';
+
+  return `
+    <div class="card mb-4">
+      <div class="flex items-start justify-between gap-3">
+
+        <div>
+          <h3 class="text-sm font-semibold text-gray-900 mb-1">
+            🌟 Попробуйте Premium Plus
+          </h3>
+
+          <p class="text-sm text-gray-500">
+            3 дня бесплатно — статистика, аналитика и без ограничений
+          </p>
+        </div>
+
+        <button
+          onclick="app.closeOnboarding()"
+          class="text-gray-400 text-lg leading-none">
+          ×
+        </button>
+      </div>
+
+      <button
+        onclick="app.startTrial()"
+        class="mt-3 w-full px-4 py-2 rounded-lg
+               bg-gray-900 text-white text-sm font-medium">
+        🎁 Попробовать бесплатно
+      </button>
+    </div>
+  `;
+}
 
 addShoppingItem(name) {
   if (!name.trim()) return;
@@ -845,7 +887,10 @@ startTrial() {
 ` :
                      this.view === 'shopping' ? this.renderShopping() :
                      this.view === 'support' ? this.renderSupport() :
-                              this.renderTasks(tasks)}
+                              `
+  ${this.view === 'today' ? this.renderOnboarding() : ''}
+  ${this.renderTasks(tasks)}
+`}
                         </div>
                     </div>
 
@@ -999,8 +1044,7 @@ startTrial() {
           </button>
         </div>
       </div>
-    `;
-  }
+    `;}
 
   // ✅ Premium / Pro — реальная статистика
   const stats = [
@@ -1011,31 +1055,46 @@ startTrial() {
   ];
 
   return `
-    <div class="stats-wrap">
-      <div class="grid grid-cols-2 gap-3">
-        ${stats.map(s => `
-          <div class="card flex items-center gap-4">
-            <div class="w-10 h-10 rounded-full bg-gray-100 flex items-center justify-center text-xl">
-              ${s.icon}
-            </div>
-
-            <div>
-              <p class="text-xs text-gray-500">${s.label}</p>
-              <p class="text-xl font-semibold text-gray-900">${s.value}</p>
-            </div>
+  <div class="stats-wrap">
+    <div class="grid grid-cols-2 gap-3">
+      ${stats.map(s => `
+        <div class="card flex items-center gap-4">
+          <div class="w-10 h-10 rounded-full bg-gray-100 flex items-center justify-center text-xl">
+            ${s.icon}
           </div>
-        `).join('')}
-      </div>
 
-      <div class="card mt-4">
-        <h3 class="text-sm font-medium text-gray-900 mb-2">📈 Прогресс</h3>
-        <p class="text-sm text-gray-500 text-center py-8">
-          Статистика появится после использования
-        </p>
-      </div>
+          <div>
+            <p class="text-xs text-gray-500">${s.label}</p>
+            <p class="text-xl font-semibold text-gray-900">${s.value}</p>
+          </div>
+        </div>
+      `).join('')}
     </div>
-  `;
-}
+  </div>
+
+  ${this.plan === 'premium' || this.plan === 'pro'
+    ? `
+      <div class="card mt-4">
+        <h3 class="text-sm font-medium text-gray-900 mb-2">
+          ⭐ Расширенная аналитика
+        </h3>
+
+        <div class="grid grid-cols-2 gap-3">
+          <div class="p-3 rounded-lg bg-gray-50 text-center">
+            <p class="text-xs text-gray-500">Среднее в день</p>
+            <p class="text-lg font-semibold">—</p>
+          </div>
+
+          <div class="p-3 rounded-lg bg-gray-50 text-center">
+            <p class="text-xs text-gray-500">Лучшая серия</p>
+            <p class="text-lg font-semibold">—</p>
+          </div>
+        </div>
+      </div>
+    `
+    : ''
+  }
+`;
 
             renderSupport() {
   return `
