--- a/index.html
+++ b/index.html
@@ -1018,33 +1018,17 @@ startTrial() {
     `;
   }).join('');
 }
+
             renderStats(completed) {
 
   // 🔒 Free — только заглушка
   if (this.plan === 'free') {
     return `
       <div class="stats-wrap">
-        <div class="card text-center py-10">
-          <div class="text-3xl mb-3">📊</div>
-
-          <h3 class="text-base font-semibold text-gray-900 mb-2">
-            Статистика доступна в Premium Plus
-          </h3>
-
-          <p class="text-sm text-gray-500 mb-4">
-            Отслеживайте прогресс, серии привычек и аналитику задач
-          </p>
-
-          <button
-            onclick="app.setView('subscription')"
-            class="inline-flex items-center justify-center
-                   px-4 py-2 rounded-lg
-                   bg-gray-900 text-white text-sm font-medium">
-            Перейти к подписке
-          </button>
-        </div>
+        ...
       </div>
-    `;}
+    `;
+  }
 
   // ✅ Premium / Pro — реальная статистика
   const stats = [
@@ -1055,46 +1039,12 @@ startTrial() {
   ];
 
   return `
-  <div class="stats-wrap">
-    <div class="grid grid-cols-2 gap-3">
-      ${stats.map(s => `
-        <div class="card flex items-center gap-4">
-          <div class="w-10 h-10 rounded-full bg-gray-100 flex items-center justify-center text-xl">
-            ${s.icon}
-          </div>
-
-          <div>
-            <p class="text-xs text-gray-500">${s.label}</p>
-            <p class="text-xl font-semibold text-gray-900">${s.value}</p>
-          </div>
-        </div>
-      `).join('')}
+    <div class="stats-wrap">
+      ...
     </div>
-  </div>
-
-  ${this.plan === 'premium' || this.plan === 'pro'
-    ? `
-      <div class="card mt-4">
-        <h3 class="text-sm font-medium text-gray-900 mb-2">
-          ⭐ Расширенная аналитика
-        </h3>
-
-        <div class="grid grid-cols-2 gap-3">
-          <div class="p-3 rounded-lg bg-gray-50 text-center">
-            <p class="text-xs text-gray-500">Среднее в день</p>
-            <p class="text-lg font-semibold">—</p>
-          </div>
-
-          <div class="p-3 rounded-lg bg-gray-50 text-center">
-            <p class="text-xs text-gray-500">Лучшая серия</p>
-            <p class="text-lg font-semibold">—</p>
-          </div>
-        </div>
-      </div>
-    `
-    : ''
-  }
-`;
+  `;
+} // ← ← ← ВОТ ЭТА СКОБКА ОБЯЗАТЕЛЬНА
+  // ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
 
             renderSupport() {
   return `
