--- a/index.html
+++ b/index.html
@@ -1172,16 +1172,30 @@ ${this.renderHeaderMenu()}
 
 renderAdmin() {
   return `
-    <div class="px-4 mt-4">
-      <div class="card">
-        <h3 class="text-sm font-medium mb-2">
-          🛠 Админ-панель
-        </h3>
+    <div class="px-4 mt-4 space-y-4">
 
-        <p class="text-sm text-gray-500">
-          Здесь будет статистика пользователей и управление подписками.
-        </p>
+      <!-- 📊 Статистика -->
+      <div class="card">
+        <h3 class="text-sm font-medium mb-3">📊 Статистика</h3>
+
+        <div class="grid grid-cols-3 gap-3 text-center">
+          <div class="p-3 rounded-lg bg-gray-50">
+            <div class="text-xl font-semibold">1</div>
+            <div class="text-xs text-gray-500">Всего</div>
+          </div>
+
+          <div class="p-3 rounded-lg bg-gray-50">
+            <div class="text-xl font-semibold">1</div>
+            <div class="text-xs text-gray-500">Premium</div>
+          </div>
+
+          <div class="p-3 rounded-lg bg-gray-50">
+            <div class="text-xl font-semibold">0</div>
+            <div class="text-xs text-gray-500">Free</div>
+          </div>
+        </div>
       </div>
+
     </div>
   `;
 }
