--- a/index.html
+++ b/index.html
@@ -1197,6 +1197,22 @@ renderAdmin() {
       </div>
 
     </div>
+      <!-- 👥 Пользователи -->
+      <div class="card">
+        <h3 class="text-sm font-medium mb-3">👥 Пользователи</h3>
+
+        <div class="space-y-2">
+          <div class="flex items-center justify-between text-sm">
+            <span>👤 User #123456</span>
+            <span class="text-gray-500">Premium</span>
+          </div>
+
+          <div class="flex items-center justify-between text-sm">
+            <span>👤 User #987654</span>
+            <span class="text-gray-500">Free</span>
+          </div>
+        </div>
+      </div>
   `;
 }
 
