--- a/index.html
+++ b/index.html
@@ -1196,7 +1196,6 @@ renderAdmin() {
         </div>
       </div>
 
-    </div>
       <!-- 👥 Пользователи -->
       <div class="card">
         <h3 class="text-sm font-medium mb-3">👥 Пользователи</h3>
@@ -1213,6 +1212,24 @@ renderAdmin() {
           </div>
         </div>
       </div>
+
+      <!-- 💎 Выдать Premium -->
+      <div class="card">
+        <h3 class="text-sm font-medium mb-3">💎 Выдать Premium</h3>
+
+        <input
+          type="text"
+          placeholder="User ID"
+          class="w-full mb-2 px-3 py-2 text-sm border rounded-lg"
+        />
+
+        <button
+          class="w-full py-2 text-sm rounded-lg bg-black text-white">
+          Выдать Premium
+        </button>
+      </div>
+
+    </div>
   `;
 }
 
